--- a/webf1/css/style.css
+++ b/webf1/css/style.css
@@ -637,13 +637,13 @@ header .links a:hover, header .links .current{
 	border-top: 1px solid #99ff66;
 	border-bottom: 1px solid #99ff66;
 
-	-webkit-box-shadow: inset 0 0 25px rgba(255,255,255,0.25), 0 0 10px rgba(0,0,0,0.25);
-	   -moz-box-shadow: inset 0 0 25px rgba(255,255,255,0.25), 0 0 10px rgba(0,0,0,0.25);
-	        box-shadow: inset 0 0 25px rgba(255,255,255,0.25), 0 0 10px rgba(0,0,0,0.25);
+	-webkit-box-shadow: inset 0 0 25px #3D3D3D, 0 0 10px rgba(0,0,0,0.25);
+	   -moz-box-shadow: inset 0 0 25px #3D3D3D, 0 0 10px rgba(0,0,0,0.25);
+	        box-shadow: inset 0 0 25px #3D3D3D, 0 0 10px rgba(0,0,0,0.25);
 }
 
 .worklog section.head{				
-	border-bottom: 1px dotted rgba(255,255,255,0.25);
+	border-bottom: 1px dotted #3D3D3D;
 }			
 
 .worklog section.head h1{
@@ -655,15 +655,13 @@ header .links a:hover, header .links .current{
 	color: #f5f5f5;
 	font-size: 40px;
 	font-family: 'Lobster', Georgia, serif;			
-	text-shadow: 0 1px 0 rgba(0,0,0,0.1),
-				 0 0 50px rgba(160, 245, 82, 0.5),
-				 0 0 100px rgba(255, 255, 255, 0.25);
+	text-shadow: 0 0 50px rgba(160, 245, 82, 0.5);
 }
 
 .worklog nav{
 	padding: 15px 0;
 	cursor: default;
-	border-bottom: 1px dotted rgba(255,255,255,0.25);					
+	border-bottom: 1px dotted #3D3D3D;					
 }
 
 .worklog nav ul{
@@ -720,7 +718,7 @@ header .links a:hover, header .links .current{
 	margin: 10px auto;
 
 	background-color: rgb(29, 27, 27);
-	border: 1px solid rgba(255,255,255,0.15);
+	border: 1px solid #3D3D3D;
 	
 	-webkit-border-radius: 4px;
 	   -moz-border-radius: 4px;
@@ -729,7 +727,7 @@ header .links a:hover, header .links .current{
 
 .worklog .post section.top{
 	padding: 5px 0;
-	border-bottom: 1px dashed rgba(255,255,255,0.25);
+	border-bottom: 1px dashed #3D3D3D;
 }
 
 .worklog .post section.top h2, .worklog #post section.top span{				
@@ -835,11 +833,10 @@ header .links a:hover, header .links .current{
 	margin: 10px;
 	padding: 5px;
 	background: #f5f5f5;
-	border: 1px solid rgba(0,0,0,0.1);
 
-	-webkit-box-shadow: inset 0 0 25px rgba(0,0,0,0.25), 0 0 10px rgba(255,255,255,0.5);
-	   -moz-box-shadow: inset 0 0 25px rgba(0,0,0,0.25), 0 0 10px rgba(255,255,255,0.5);
-	        box-shadow: inset 0 0 25px rgba(0,0,0,0.25), 0 0 10px rgba(255,255,255,0.5);
+	-webkit-box-shadow: inset 0 0 25px #B8B8B8, 0 0 10px #CACACA;
+	   -moz-box-shadow: inset 0 0 25px #B8B8B8, 0 0 10px #CACACA;
+	        box-shadow: inset 0 0 25px #B8B8B8, 0 0 10px #CACACA;
 }
 
 .worklog .post section.content .right{ float:right; }
@@ -851,17 +848,17 @@ header .links a:hover, header .links .current{
 }
 
 .worklog .post section.content .image:hover{
-	-webkit-box-shadow: inset 0 0 25px rgba(0,0,0,0.25);
-	   -moz-box-shadow: inset 0 0 25px rgba(0,0,0,0.25);
-			box-shadow: inset 0 0 25px rgba(0,0,0,0.25);
+	-webkit-box-shadow: inset 0 0 25px #B8B8B8;
+	   -moz-box-shadow: inset 0 0 25px #B8B8B8;
+			box-shadow: inset 0 0 25px #B8B8B8;
 }
 
 .worklog section.foot {
 	overflow: auto;
 	padding: 5px 80px;
 	background-color: rgba(0,0,0,0.128);
-	border-top: 1px dotted rgba(255,255,255,0.25);
-	border-bottom: 1px dotted rgba(255,255,255,0.25);
+	border-top: 1px dotted #3D3D3D;
+	border-bottom: 1px dotted #3D3D3D;
 }
 
 .worklog section.foot ul li{
