--- a/year2/adproc/coursework/src/pipesrus/Gui.form
+++ b/year2/adproc/coursework/src/pipesrus/Gui.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
@@ -9,6 +9,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -30,7 +31,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="titleLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="308" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="addButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="editButton" min="-2" max="-2" attributes="0"/>
@@ -43,7 +44,7 @@
                           <Component id="totalCostLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="itemAmountLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="302" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="submitButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="resetButton" min="-2" max="-2" attributes="0"/>
@@ -125,23 +126,7 @@
               <SerializedValue value="-84,-19,0,5,115,114,0,13,106,97,118,97,46,97,119,116,46,70,111,110,116,-59,-95,53,-26,-52,-34,86,115,3,0,6,73,0,25,102,111,110,116,83,101,114,105,97,108,105,122,101,100,68,97,116,97,86,101,114,115,105,111,110,70,0,9,112,111,105,110,116,83,105,122,101,73,0,4,115,105,122,101,73,0,5,115,116,121,108,101,76,0,20,102,82,101,113,117,101,115,116,101,100,65,116,116,114,105,98,117,116,101,115,116,0,21,76,106,97,118,97,47,117,116,105,108,47,72,97,115,104,116,97,98,108,101,59,76,0,4,110,97,109,101,116,0,18,76,106,97,118,97,47,108,97,110,103,47,83,116,114,105,110,103,59,120,112,0,0,0,1,65,64,0,0,0,0,0,12,0,0,0,0,112,116,0,9,83,97,110,115,83,101,114,105,102,120"/>
             </Property>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-              <StringArray count="15">
-                <StringItem index="0" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="1" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="2" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="3" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="4" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="5" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="6" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="7" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="8" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="9" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="10" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="11" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="12" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="13" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-                <StringItem index="14" value="&lt;html&gt;&lt;b&gt;&lt;font color=&quot;bold&quot;&gt;&#xa3;3.00&lt;/font&gt; | &lt;b&gt;&lt;font color=&quot;blue&quot;&gt;2x :&lt;/font&gt;&lt;/b&gt; &lt;font color=&quot;red&quot;&gt;&lt;i&gt;1m&lt;/i&gt; by &lt;i&gt;3in&lt;/i&gt;&lt;/font&gt; Grade 3 Pipes &lt;i&gt;(Insulated, Reinforced, Chemical Resistant)&lt;/i&gt;&lt;/html&gt;"/>
-              </StringArray>
+              <StringArray count="0"/>
             </Property>
             <Property name="opaque" type="boolean" value="false"/>
           </Properties>
